[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/wep2.png" type="Texture" id=1]
[ext_resource path="res://scripts/wep2.gd" type="Script" id=2]
[ext_resource path="res://sprites/bul_effect1.png" type="Texture" id=3]
[ext_resource path="res://audio/sfx/475157__trxone__pulse-rifle-2.wav" type="AudioStream" id=4]

[node name="wep2" type="Node2D" groups=[
"weapon",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 5.15043, -1.12373 )
texture = ExtResource( 1 )

[node name="shoot_eff" type="Sprite" parent="."]
visible = false
position = Vector2( 18.9734, -4.25399 )
texture = ExtResource( 3 )

[node name="audio" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 5.15043, -1.12373 )
stream = ExtResource( 4 )
volume_db = -17.155
pitch_scale = 0.5

[node name="shoot_pos" type="Position2D" parent="."]
position = Vector2( 17.886, -4.40128 )

[node name="shoot_eff2" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true
[connection signal="timeout" from="shoot_eff2" to="." method="_on_shoot_eff2_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
